fix: overflow scroll do mobile

--- a/src/styles/Projeto.module.css
+++ b/src/styles/Projeto.module.css
@@ -108,7 +108,7 @@
   .modalProjects{
     height: 90%;
     width: 90%;
-    overflow: auto;
+    overflow: scroll;
   }
   .modalProjects h2{
     font-size: 1.2rem;
